--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@trpc/next": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "ag-grid-react": "^32.1.0",
     "framer-motion": "^11.3.28",
     "geist": "^1.3.0",
     "next": "^14.2.4",
@@ -36,6 +37,7 @@
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.3.0",
     "react-number-format": "^5.4.0",
+    "react-spinners": "^0.14.1",
     "superjson": "^2.2.1",
     "zod": "^3.23.8"
   },
