--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
     "ag-grid-react": "^32.1.0",
+    "chakra-react-select": "^4.9.1",
     "framer-motion": "^11.3.28",
     "geist": "^1.3.0",
     "next": "^14.2.4",
