--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@trpc/server": "^11.0.0-rc.446",
     "ag-grid-react": "^32.1.0",
     "chakra-react-select": "^4.9.1",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.3.28",
     "geist": "^1.3.0",
     "next": "^14.2.4",
