--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.3.0",
     "react-number-format": "^5.4.0",
+    "react-papaparse": "^4.4.0",
     "react-spinners": "^0.14.1",
     "superjson": "^2.2.1",
     "zod": "^3.23.8"
