--- a/package.json
+++ b/package.json
@@ -30,12 +30,15 @@
     "ag-grid-react": "^32.1.0",
     "chakra-react-select": "^4.9.1",
     "date-fns": "^3.6.0",
+    "formidable": "^3.5.1",
     "framer-motion": "^11.3.28",
     "geist": "^1.3.0",
     "next": "^14.2.4",
     "next-auth": "^4.24.7",
+    "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-drag-drop-files": "^2.3.10",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.3.0",
     "react-number-format": "^5.4.0",
@@ -46,6 +49,7 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
