--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "stockr",
+  "name": "craftmate",
+  "displayName": "CraftMate",
   "version": "0.1.0",
   "private": true,
   "type": "module",
