Update app name.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "craftmate",
-  "displayName": "CraftMate",
+  "displayName": "Craftmate",
   "version": "0.1.0",
   "private": true,
   "type": "module",
