--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@typescript-eslint/parser": "^8.1.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.4",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "prisma": "^5.14.0",
     "typescript": "^5.5.3"
   },
